# siclib

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh  setup.zsh  setup.zsh.storage
.github/workflows/: ci.yml
applied/: differentiation.py  main.py
docs/: TODO
docs/projects/numerical_applications/: index.md
docs/projects/siclib/: index.md
docs/projects/siclib/numerical/: index.md
docs/siclib/: adaptive.md  index.md  linalg.md  models.md  numerical.md  stats.md
pysiclib/: numerical.py
pysiclib/_pysiclib/: adaptive.pyi  linalg.pyi  models.pyi  numerical.pyi  stats.pyi
pysiclib/api/: __init__.py  __init__.pyi  adaptive.py  adaptive.pyi  models.py  models.pyi
siclib/: _siclib_py_bindings.cpp  adaptive.hpp  containers.hpp  linalg.hpp  models.hpp  numerical.hpp  siclib.hpp  stats.hpp
siclib/adaptive/: NeuralNet.cpp  NeuralNet.hpp  _old.txt
siclib/containers/: containers_base.cpp  containers_base.hpp
siclib/linalg/: TensorTransform.hpp  TensorView.cpp  TensorView.hpp  TensorView.tpp  TensorView_1.cpp  TensorView_2.cpp  tensor.cpp  tensor.hpp
siclib/models/: base.cpp  base.hpp  models_base.cpp  models_base.hpp
siclib/numerical/: differentiation.cpp  general.cpp  general.hpp  initial_value.cpp  initial_value.hpp  sol_equations.hpp
siclib/stats/: base.cpp  base.hpp  descriptive.cpp  descriptive.hpp
sicnumerical/: __init__.py  diff.py  eq_sols.py  inital_value.py  inte.py  sol_eqs.py
sicnumerical.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: differentiation.cpp  differentiation.hpp  integration.cpp  integration.hpp  interpolation.hpp  main.cpp  sol_equations.cpp  sol_equations.hpp
tests/: Tensor_test.py  _main.py  adaptive_test.py  d.py  main  main.cpp  models_test.py  numerical_test.py  other.py  py_test_main.py  scratchpad.py  stats_test.py  test_broadcasting.py  test_matinv.py  test_matmul.py  test_models.py  test_neural_net.py  test_numerical.py  test_stats.py  test_tensor.py
tests/main.dSYM/Contents/Resources/DWARF/: main
